tests/assets/test_suites/w3c_wsdl20/documents/good/Import-1G/XSDImport.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/good/Import-1G/XSDImport.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/XSDImport"
	xmlns:name="http://example.org/name"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<wsdl:documentation>
		This test shows a valid use of an XML schema import.
	</wsdl:documentation>

	<wsdl:types>
		<xs:import schemaLocation="name.xsd"
			namespace="http://example.org/name" />
	</wsdl:types>

	<wsdl:interface name="Names">
		<wsdl:operation name="getNameFromSIN"
			pattern="http://www.w3.org/ns/wsdl/in-out">
			<wsdl:input element="name:SIN" />
			<wsdl:output element="name:Name" />
		</wsdl:operation>
	</wsdl:interface>
</wsdl:description>
